syntax = "proto3";

package protos;

import "openchain.proto";
import "google/protobuf/empty.proto";

// Interface exported by the Openchain server.
service Openchain {
	// GetBlockchainInfo returns information about the blockchain ledger such as
	// height, current block hash, and previous block hash.
	rpc GetBlockchainInfo(google.protobuf.Empty) returns (BlockchainInfo) {}

	// GetBlockByNumber returns the data contained within a specific block in the
	// blockchain. The genesis block is block zero.
	rpc GetBlockByNumber(BlockNumber) returns (Block) {}

	// GetBlockCount returns the current number of blocks in the blockchain data
	// structure.
	rpc GetBlockCount(google.protobuf.Empty) returns (BlockCount) {}
}

// Contains information about the blockchain ledger such as height, current
// block hash, and previous block hash.
message BlockchainInfo {
  uint64 height = 1;
  bytes currentBlockHash = 2;
  bytes previousBlockHash = 3;
}

// Specifies the block number to be returned from the blockchain.
message BlockNumber {
  uint64 number = 1;
}

// Specifies the current number of blocks in the blockchain.
message BlockCount {
  uint64 count = 1;
}
